--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -11,12 +11,13 @@ a {
   color: #f1f1f1;
   width: 100%;
   position: fixed;
+  z-index: 1;
 }
 
 #menu-video {
   background-color: black;
   position: fixed;
-  z-index: 0;
+  z-index: 1;
   max-width: 100vw;
   min-height: 100vh;
   object-fit: cover;
@@ -35,6 +36,7 @@ a {
   animation-duration: 0.5s;
   animation-delay: 0.5s;
   animation-fill-mode: forwards;
+  z-index: 2;
 }
 
 @keyframes up-down {
@@ -62,4 +64,5 @@ a {
   margin: 30px 0;
   padding: 0px;
   color: white;
+  z-index: 2;
 }
